Add default install directory to /usr/local/bin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ INCLUDE_DIRECTORIES(/usr/local/include/opencv4)
 add_executable( dragon-eye dragon-eye.cpp jetsonGPIO/jetsonGPIO.c )
 target_link_libraries( dragon-eye ${OpenCV_LIBS} Threads::Threads)
 
+install(TARGETS dragon-eye DESTINATION /usr/local/bin)
