1.Modify config files 2.More params to config files

--- a/etc/dragon-eye/camera.config
+++ b/etc/dragon-eye/camera.config
@@ -1,4 +1,5 @@
-wbmode=0
+# White balence 0 : off / 1 : auto
+wbmode=1
 tnr-mode=2
 tnr-strength=1
 ee-mode=1
@@ -6,4 +7,5 @@ ee-strength=0
 gainrange="1 16"
 ispdigitalgainrange="1 8"
 exposuretimerange="5000000 20000000" 
-exposurecompensation=1
+# exposure compensation from -2 ~ 2
+exposurecompensation=0
