--- a/etc/dragon-eye/system.config
+++ b/etc/dragon-eye/system.config
@@ -1,5 +1,6 @@
 base.type=B
-video.output.hwswitch=no
+base.remote.control=yes
+base.hwswitch=no
 video.output.screen=no
 video.output.file=no
 video.output.rtp=yes
