--- a/etc/dragon-eye/camera.config
+++ b/etc/dragon-eye/camera.config
@@ -9,3 +9,5 @@ ispdigitalgainrange="1 8"
 exposuretimerange="5000000 20000000" 
 # exposure compensation from -2 ~ 2
 exposurecompensation=0
+# exposure threshold from 0 ~ 255
+exposurethreshold=255
