1.Supports UDP socket 2.Base A/B Trigger through UDP socket 3.Modify system.config for RTP & UDP remote host & port

--- a/etc/dragon-eye/system.config
+++ b/etc/dragon-eye/system.config
@@ -1,8 +1,11 @@
-base.type=B
+base.type=A
 base.remote.control=yes
 base.hwswitch=no
+base.udp.remote.host=10.0.0.238
+base.udp.remote.port=4999
+base.rtp.remote.host=10.0.0.238
+base.rtp.remote.port=5000
 video.output.screen=no
 video.output.file=no
 video.output.rtp=yes
 video.output.result=no
-rtp.remote.host=10.0.0.238
