--- a/etc/dragon-eye/system.config
+++ b/etc/dragon-eye/system.config
@@ -8,7 +8,9 @@ base.rtp.remote.port=5000
 video.output.screen=no
 video.output.file=no
 video.output.rtp=no
-video.output.hls=yes
+video.output.hls=no
+video.output.rtsp=yes
 video.output.result=no
 base.mog2.threshold=32
 base.new.target.restriction=no
+
