1.Supports EDIMAX EW-7811Un V2 N150 as Access Point / AC 8265 wifi as station 2.Predictible interface name wlan9 for N150 3.rtwap.service to start AP on boot 4.Multicast 224.0.0.2:9002 on wlan9 / 224.0.0.3:9003 on wlan0 5.Rewrite multicat related code

--- a/etc/systemd/system/dragon-eye.service
+++ b/etc/systemd/system/dragon-eye.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Dragon Eye
-After=nvargus-daemon.service
+After=network.target nvargus-daemon.service
 
 [Service]
 ExecStart=/usr/local/bin/dragon-eye
