1.Various document update 2.Change video path from /home/gigijoe/Videos to /opt/Videos 3.Fix video path of samba

--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -259,8 +259,8 @@
 ;   write list = root, @lpadmin
 
 [Videos]
-   comment = Samba on JetsonNano
-   path = /home/gigijoe/Videos
+   comment = Videos of dragon-eye
+   path = /opt/Videos
    read only = no
    browsable = yes
-
+   guets ok = yes
