Fix service run type to simple which means - A long-running process that does not background its self and stays attached to the shell.

--- a/etc/systemd/system/dragon-eye.service
+++ b/etc/systemd/system/dragon-eye.service
@@ -4,7 +4,7 @@ After=network.target nvargus-daemon.service
 
 [Service]
 ExecStart=/usr/local/bin/dragon-eye
-Type=oneshot
+Type=simple
 
 [Install]
 WantedBy=multi-user.target
