1.Video file save with H.264 codec 2.Copy dragon-eye to /tmp/dragon-eye and run it 3.Systemctl restart dragon-eye after 30 seconds 4.Update install.sh & setup.sh with above changes

--- a/etc/systemd/system/dragon-eye.service
+++ b/etc/systemd/system/dragon-eye.service
@@ -3,8 +3,10 @@ Description=Dragon Eye
 After=network.target nvargus-daemon.service
 
 [Service]
-ExecStart=/usr/local/bin/dragon-eye
+ExecStart=/usr/local/bin/dragon-eye.sh
 Type=simple
+Restart=no-failure
+RestartSec=30
 
 [Install]
 WantedBy=multi-user.target
