1.Fix bug of object tracking 2.Fix bug of various threads doesn't stop while exit program 3.Colorful drawing rectangle of output result 4.Change SIGHUP to SIGUSR1 and properly handle signal SIGUSR1 5.Supports firmware upgrade 6.Fix bug of systemd restart dragon-eye service 7.Version v0.1.5

--- a/etc/systemd/system/dragon-eye.service
+++ b/etc/systemd/system/dragon-eye.service
@@ -5,8 +5,8 @@ After=network.target nvargus-daemon.service
 [Service]
 ExecStart=/usr/local/bin/dragon-eye.sh
 Type=simple
-Restart=no-failure
-RestartSec=30
+Restart=on-success
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
