1.Supports anonymouy UDP trigger. Ex. <A0001> 2.Supports misc settings 3.Rearrange all code

--- a/etc/samba/smb.conf
+++ b/etc/samba/smb.conf
@@ -262,5 +262,7 @@
    comment = Videos of dragon-eye
    path = /opt/Videos
    read only = no
+   public = yes
    browsable = yes
    guets ok = yes
+   directory mask = 775
