--- a/etc/dragon-eye/camera.config
+++ b/etc/dragon-eye/camera.config
@@ -12,3 +12,5 @@ exposuretimerange="5000000 10000000"
 exposurecompensation=0
 # exposure threshold from 0 ~ 5
 exposurethreshold=3
+# flip-mode is 1 or 3
+flip-mode=3
